--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.7.2
+attrs==23.1.0
 certifi==2023.7.22
 cffi==1.16.0
 charset-normalizer==3.3.2
@@ -10,14 +11,22 @@ django-allauth==0.50.0
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.1.0
 idna==3.4
+inflection==0.5.1
+jsonschema==4.20.0
+jsonschema-specifications==2023.11.2
 oauthlib==3.2.2
+Pillow==10.1.0
 pycparser==2.21
 PyJWT==2.8.0
 python3-openid==3.2.0
 pytz==2023.3.post1
+PyYAML==6.0.1
+referencing==0.32.0
 requests==2.31.0
 requests-oauthlib==1.3.1
+rpds-py==0.15.2
 sqlparse==0.4.4
 typing_extensions==4.8.0
 tzdata==2023.3
+uritemplate==4.1.1
 urllib3==2.0.7
